--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -32,8 +32,8 @@
 
     <link rel="icon" href="img/const/cropped-Sin-titulo-2-32x32.png" sizes="32x32">
     <link rel="icon" href="img/const/cropped-Sin-titulo-2-192x192.png" sizes="192x192">
-    <link rel="apple-touch-icon" href="../img/const/cropped-Sin-titulo-2-180x180.png">
-    <meta name="msapplication-TileImage" content="../img/const/cropped-Sin-titulo-2-270x270.png">
+    <link rel="apple-touch-icon" href="img/const/cropped-Sin-titulo-2-180x180.png">
+    <meta name="msapplication-TileImage" content="img/const/cropped-Sin-titulo-2-270x270.png">
 </head>
 
 <body>
@@ -425,7 +425,7 @@
 
                     <div class="text-center">
                         <a href="#">
-                            <img class="img-margin-bottom" src="../img/footer/cropped-logoh-300x107.png" width="50%"
+                            <img class="img-margin-bottom" src="img/footer/cropped-logoh-300x107.png" width="50%"
                                 alt="QSE Consulting">
                         </a>
                     </div>
