--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/index.html">Inicio</a>
+                        <a class="nav-link active" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link "
-                            href="/nosotros.html">Nosotros</a>
+                            href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link "
-                            href="/mecanismo-de-trabajo.html">Mecanismo de Trabajo</a>
+                            href="mecanismo-de-trabajo.html">Mecanismo de Trabajo</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle"
@@ -83,11 +83,11 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link "
-                            href="/capacitaciones.html">Capacitaciones</a>
+                            href="capacitaciones.html">Capacitaciones</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link "
-                            href="/contacto.html">Contáctenos</a>
+                            href="contacto.html">Contáctenos</a>
                     </li>
 
                 </ul>
