--- a/mecanismo-de-trabajo.html
+++ b/mecanismo-de-trabajo.html
@@ -40,7 +40,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="https://wernerlh.github.io/examen-final/">
                 <img src="img/footer/cropped-logoh-300x107.png" alt="QSE Consulting" height="40">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -49,15 +49,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link " href="/index.html">Inicio</a>
+                        <a class="nav-link " href="https://wernerlh.github.io/examen-final/">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link "
-                            href="/nosotros.html">Nosotros</a>
+                            href="https://wernerlh.github.io/examen-final/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active"
-                            href="/mecanismo-de-trabajo.html">Mecanismo de Trabajo</a>
+                            href="https://wernerlh.github.io/examen-final/mecanismo-de-trabajo.html">Mecanismo de Trabajo</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle"
@@ -83,11 +83,11 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link "
-                            href="/capacitaciones.html">Capacitaciones</a>
+                            href="https://wernerlh.github.io/examen-final/capacitaciones.html">Capacitaciones</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link "
-                            href="/contacto.html">Contáctenos</a>
+                            href="https://wernerlh.github.io/examen-final/contacto.html">Contáctenos</a>
                     </li>
 
                 </ul>
@@ -292,10 +292,12 @@
                 <div class="col-md-4">
 
                     <div class="text-center">
-                        <a href="#">
-                            <img class="img-margin-bottom" src="img/footer/cropped-logoh-300x107.png" width="50%"
-                                alt="QSE Consulting">
-                        </a>
+                <div class="text-center">
+                    <a href="https://wernerlh.github.io/examen-final/">
+                        <img class="img-margin-bottom" src="img/footer/cropped-logoh-300x107.png" width="50%"
+                            alt="QSE Consulting">
+                    </a>
+                </div>
                     </div>
                     <p>Mantenemos en todo momento la cultura de calidad
                         total y mejora continua brindando soluciones
