--- a/index.html
+++ b/index.html
@@ -52,33 +52,33 @@
                         <a class="nav-link active" href="https://wernerlh.github.io/examen-final/">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link "
-                            href="https://wernerlh.github.io/examen-final/nosotros.html">Nosotros</a>
+                        <a class="nav-link " href="https://wernerlh.github.io/examen-final/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link "
-                            href="https://wernerlh.github.io/examen-final/mecanismo-de-trabajo.html">Mecanismo de Trabajo</a>
+                            href="https://wernerlh.github.io/examen-final/mecanismo-de-trabajo.html">Mecanismo de
+                            Trabajo</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle"
-                            href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             Servicios
                             <i class="bi bi-caret-down-fill"></i>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Gestión de Proyectos</a></li>
-                            <li><a class="dropdown-item" href="#"><i
-                                        class="bi bi-caret-right-fill"></i>Sistemas de Gestión</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="bi bi-caret-right-fill"></i>Sistemas de
+                                    Gestión</a></li>
                             <li><a class="dropdown-item" href="#"><i class="bi bi-caret-right-fill"></i>Seguridad y
                                     Salud en el Trabajo</a></li>
-                            <li><a class="dropdown-item" href="#"><i
-                                        class="bi bi-caret-right-fill"></i>Auditorías</a></li>
-                            <li><a class="dropdown-item" href="#"><i
-                                        class="bi bi-caret-right-fill"></i>Homologación</a></li>
-                            <li><a class="dropdown-item" href="#"><i
-                                        class="bi bi-caret-right-fill"></i>Capacitación y Formación</a></li>
-                            <li><a class="dropdown-item" href="#"><i
-                                        class="bi bi-caret-right-fill"></i>Monitoreos</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="bi bi-caret-right-fill"></i>Auditorías</a>
+                            </li>
+                            <li><a class="dropdown-item" href="#"><i class="bi bi-caret-right-fill"></i>Homologación</a>
+                            </li>
+                            <li><a class="dropdown-item" href="#"><i class="bi bi-caret-right-fill"></i>Capacitación y
+                                    Formación</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="bi bi-caret-right-fill"></i>Monitoreos</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -295,46 +295,51 @@
 
     </main>
 
-    <footer class="text-white py-4">
-        <div class="container">
+    <footer class="text-white">
+        <div class="container py-4">
             <div class="row">
                 <div class="col-md-4">
 
                     <div class="text-center">
-                <div class="text-center">
-                    <a href="https://wernerlh.github.io/examen-final/">
-                        <img class="img-margin-bottom" src="img/footer/cropped-logoh-300x107.png" width="50%"
-                            alt="QSE Consulting">
-                    </a>
-                </div>
+                        <a href="https://wernerlh.github.io/examen-final/">
+                            <img class="img-margin-bottom" src="img/footer/cropped-logoh-300x107.png" width="50%"
+                                alt="QSE Consulting">
+                        </a>
                     </div>
-                    <p>Mantenemos en todo momento la cultura de calidad
-                        total y mejora continua brindando soluciones
-                        innovadoras en materia de Gestión de Calidad,
-                        Seguridad Ocupacional, Medio Ambiente, Anti
-                        Soborno, otros.</p>
 
+                    <div class="text-center">
+                        <p>Mantenemos en todo momento la cultura de calidad
+                            total y mejora continua brindando soluciones
+                            innovadoras en materia de Gestión de Calidad,
+                            Seguridad Ocupacional, Medio Ambiente, Anti
+                            Soborno, otros.</p>
+                    </div>
 
                 </div>
                 <div class="col-md-4">
                     <h5>Mapa del Sitio</h5>
-                    <a href="https://wernerlh.github.io/examen-final" class="text-white"><i class="bi bi-caret-right-fill"></i>
+                    <a href="https://wernerlh.github.io/examen-final" class="text-white"><i
+                            class="bi bi-caret-right-fill"></i>
                         Inicio</a><br>
 
-                    <a href="https://wernerlh.github.io/examen-final/nosotros.html" class="text-white"><i class="bi bi-caret-right-fill"></i>
+                    <a href="https://wernerlh.github.io/examen-final/nosotros.html" class="text-white"><i
+                            class="bi bi-caret-right-fill"></i>
                         Nosotros</a><br>
                     <a href="/#" class="text-white"><i class="bi bi-caret-right-fill"></i>
                         Servicios</a><br>
-                    <a href="https://wernerlh.github.io/examen-final/mecanismo-de-trabajo.html" class="text-white"><i class="bi bi-caret-right-fill"></i> Mecanismo
+                    <a href="https://wernerlh.github.io/examen-final/mecanismo-de-trabajo.html" class="text-white"><i
+                            class="bi bi-caret-right-fill"></i> Mecanismo
                         de
                         trabajo</a><br>
-                    <a href="https://wernerlh.github.io/examen-final/capacitaciones.html" class="text-white"><i class="bi bi-caret-right-fill"></i>
+                    <a href="https://wernerlh.github.io/examen-final/capacitaciones.html" class="text-white"><i
+                            class="bi bi-caret-right-fill"></i>
                         Capacitaciones</a><br>
                     <a href="#" class="text-white"><i class="bi bi-caret-right-fill"></i> Aula
                         virtual</a><br>
                     <a href="#" class="text-white"><i class="bi bi-caret-right-fill"></i>
                         Blogs</a><br>
-                    <a href="https://wernerlh.github.io/examen-final/contacto.html" class="text-white"><i class="bi bi-caret-right-fill"></i>
+                    <a href="https://wernerlh.github.io/examen-final/contacto.html" class="text-white"><i
+                            class="bi bi-caret-right-fill"></i>
                         Contactenos</a><br>
 
 
@@ -360,16 +365,15 @@
                 </div>
             </div>
         </div>
-
-    </footer>
-
-    <div class="container text-center">
-        <div class="row align-items-center">
-            <div class="col">
-                <b class="copyryght">Copyright 2024 - Werner</b>
+        <div class="copyryght container-fluid text-center">
+            <div class="row align-items-center">
+                <div class="col">
+                    <b>Copyright 2024 - <a class="bold-link" href="https://wernerlh.com/">Werner</a></b>
+                </div>
             </div>
         </div>
-    </div>
+    </footer>
+
 
     <!-- Bootstrap JS y Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
