--- a/contacto.html
+++ b/contacto.html
@@ -41,7 +41,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="https://wernerlh.github.io/examen-final/">
-                <img src="img/footer/cropped-logoh-300x107.png" alt="QSE Consulting" height="40">
+                <img src="img/footer/cropped-logoh-300x107.png" alt="QSE Consulting">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -158,9 +158,9 @@
             <div class="row">
                 <div class="col-md-4">
 
-                    <div class="text-center">
+                    <div class="img-footer text-center">
                         <a href="https://wernerlh.github.io/examen-final/">
-                            <img class="img-margin-bottom" src="img/footer/cropped-logoh-300x107.png" width="50%"
+                            <img class="img-margin-bottom" src="img/footer/cropped-logoh-300x107.png" 
                                 alt="QSE Consulting">
                         </a>
                     </div>
@@ -223,7 +223,7 @@
                 </div>
             </div>
         </div>
-        <div class="copyryght container-fluid text-center">
+        <div class="copyryght container-fluid text-center py-1">
             <div class="row align-items-center">
                 <div class="col">
                     <b>Copyright 2024 - <a class="bold-link" href="https://wernerlh.com/">Werner</a></b>
