--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 </div>
             </div>
         </div>
-        <div class="copyryght container-fluid text-center py-1 py-1">
+        <div class="copyryght container-fluid text-center py-1">
             <div class="row align-items-center">
                 <div class="col">
                     <b>Copyright 2024 - <a class="bold-link" href="https://wernerlh.com/">Werner</a></b>
