--- a/contacto.html
+++ b/contacto.html
@@ -108,7 +108,7 @@
         <div class="container">
             <div class="row">
                 <!-- Left Column -->
-                <div class="col-md-6">
+                <div class="col-md-6 mb-4">
                     <h2>ESCRÍBENOS UN MENSAJE</h2>
 
                     <form action="{{ route('contacto.store') }}" method="POST">
@@ -205,7 +205,7 @@
 
                 </div>
                 <div class="col-md-4">
-                    <h5>Contacto</h5>
+                    <h5 class="pt-4">Contacto</h5>
                     <p>Email: <br> contacto@qse.pe</p>
                     <p>Teléfono: <br> +51 967 273 589</p>
                     <h5>Redes sociales:</h5>
