--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     todas las áreas empresariales.</p>
 
                 <a href="https://wa.me/51967273589?text=Quiero%20informe%20de%20sus%20servicios"
-                    class="btn btn-custom btn-lg mt-3">Solicitar
+                    class="btn btn-custom2 btn-lg mt-3">Solicitar
                     información</a>
             </div>
         </div>
@@ -118,7 +118,7 @@
             <h2 class="text-center mb-5">¿Por qué confiar en QSE
                 Consulting?</h2>
             <div class="row align-items-center">
-                <div class="col-md-6">
+                <div class="col-md-6 text-center">
                     <p>Contamos con amplia experiencia en el rubro de
                         implementación de sistemas de gestión para la
                         mejora
@@ -174,118 +174,118 @@
                 <h2 class="text-center mb-5">Nuestros Servicios</h2>
                 <div class="row justify-content-center">
                     <!-- Servicio 1: Gestión de Proyectos -->
-                    <div class="col-md-4 mb-4">
+                    <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow text-center d-flex flex-column">
                             <div class="card-body flex-grow-1">
                                 <i class="bi bi-briefcase service-icon mb-3"></i>
                                 <h5 class="card-title">Gestión de
                                     Proyectos</h5>
-                                <p>Servicio especializado en la
+                                <p class="py-3">Servicio especializado en la
                                     planificación, ejecución y seguimiento
                                     de proyectos,
                                     garantizando que se cumplan los
                                     objetivos en tiempo y forma.</p>
-                                <a href="#" class="btn btn-custom mt-auto">Conocer
-                                    más</a>
+                                <a href="#" class="btn btn-custom mt-auto"><b>Conocer
+                                    más</b></a>
                             </div>
                         </div>
                     </div>
 
                     <!-- Servicio 2: Sistemas de Gestión -->
-                    <div class="col-md-4 mb-4">
+                    <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow text-center d-flex flex-column">
                             <div class="card-body flex-grow-1">
                                 <i class="bi bi-gear service-icon mb-3"></i>
                                 <h5 class="card-title">Sistemas de
                                     Gestión</h5>
-                                <p>Implementación de Sistemas de Gestión basado en diversos estándares internacionales,
+                                <p class="py-3">Implementación de Sistemas de Gestión basado en diversos estándares internacionales,
                                     para
                                     mejorar la eficiencia organizacional.</p>
-                                <a href="#" class="btn btn-custom mt-auto">Conocer
-                                    más</a>
+                                <a href="#" class="btn btn-custom mt-auto"><b>Conocer
+                                    más</b></a>
                             </div>
                         </div>
                     </div>
 
                     <!-- Servicio 3: Seguridad y Salud en el Trabajo -->
-                    <div class="col-md-4 mb-4">
+                    <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow text-center d-flex flex-column">
                             <div class="card-body flex-grow-1">
                                 <i class="bi bi-shield-check service-icon mb-3"></i>
                                 <h5 class="card-title">Seguridad y Salud en
                                     el Trabajo</h5>
-                                <p>Servicios que garantizan el cumplimiento
+                                <p class="py-3">Servicios que garantizan el cumplimiento
                                     de normativas en Seguridad y Salud en el
                                     Trabajo, promoviendo una cultura de
                                     prevención de riesgos laborales.</p>
-                                <a href="#" class="btn btn-custom mt-auto">Conocer
-                                    más</a>
+                                <a href="#" class="btn btn-custom mt-auto"><b>Conocer
+                                    más</b></a>
                             </div>
                         </div>
                     </div>
 
                     <!-- Servicio 4: Auditorías -->
-                    <div class="col-md-4 mb-4">
+                    <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow text-center d-flex flex-column">
                             <div class="card-body flex-grow-1">
                                 <i class="bi bi-file-earmark-text service-icon mb-3"></i>
                                 <h5 class="card-title">Auditorías</h5>
-                                <p>Proceso de evaluación que valida el
+                                <p class="py-3">Proceso de evaluación que valida el
                                     cumplimiento de normativas y estándares
                                     específicos en la organización.</p>
-                                <a href="#" class="btn btn-custom mt-auto">Conocer
-                                    más</a>
+                                <a href="#" class="btn btn-custom mt-auto"><b>Conocer
+                                    más</b></a>
                             </div>
                         </div>
                     </div>
 
                     <!-- Servicio 5: Homologación -->
-                    <div class="col-md-4 mb-4">
+                    <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow text-center d-flex flex-column">
                             <div class="card-body flex-grow-1">
                                 <i class="bi bi-check-circle service-icon mb-3"></i>
                                 <h5 class="card-title">Homologación</h5>
-                                <p>Evaluación de proveedores para garantizar
+                                <p class="py-3">Evaluación de proveedores para garantizar
                                     que cumplan con los estándares
                                     requeridos
                                     por la organización en capacidad y
                                     calidad de servicios/productos.</p>
-                                <a href="#" class="btn btn-custom mt-auto">Conocer
-                                    más</a>
+                                <a href="#" class="btn btn-custom mt-auto"><b>Conocer
+                                    más</b></a>
                             </div>
                         </div>
                     </div>
 
                     <!-- Servicio 6: Capacitación y Formación -->
-                    <div class="col-md-4 mb-4">
+                    <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow text-center d-flex flex-column">
                             <div class="card-body flex-grow-1">
                                 <i class="bi bi-person-fill service-icon mb-3"></i>
                                 <h5 class="card-title">Capacitación y
                                     Formación</h5>
-                                <p>Diseño e impartición de cursos y
+                                <p class="py-3">Diseño e impartición de cursos y
                                     seminarios adaptados a las necesidades
                                     de cada
                                     organización para mejorar las
                                     competencias del personal.</p>
-                                <a href="#" class="btn btn-custom mt-auto">Conocer
-                                    más</a>
+                                <a href="#" class="btn btn-custom mt-auto"><b>Conocer
+                                    más</b></a>
                             </div>
                         </div>
                     </div>
 
                     <!-- Servicio 7: Monitoreos -->
-                    <div class="col-md-4 mb-4">
+                    <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow text-center d-flex flex-column">
                             <div class="card-body flex-grow-1">
                                 <i class="bi bi-eye service-icon mb-3"></i>
                                 <h5 class="card-title">Monitoreos</h5>
-                                <p>Monitoreo de agentes ocupacionales, parte
+                                <p class="py-3">Monitoreo de agentes ocupacionales, parte
                                     del cumplimiento normativo en materia de
                                     seguridad y salud en el trabajo, a nivel
                                     nacional e internacional.</p>
-                                <a href="#" class="btn btn-custom mt-auto">Conocer
-                                    más</a>
+                                <a href="#" class="btn btn-custom mt-auto"><b>Conocer
+                                    más</b></a>
                             </div>
                         </div>
                     </div>
@@ -298,7 +298,7 @@
     <footer class="text-white">
         <div class="container py-4">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
 
                     <div class=" img-footer text-center">
                         <a href="https://wernerlh.github.io/examen-final/">
@@ -316,7 +316,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <h5>Mapa del Sitio</h5>
                     <a href="https://wernerlh.github.io/examen-final" class="text-white"><i
                             class="bi bi-caret-right-fill"></i>
@@ -346,8 +346,8 @@
 
 
                 </div>
-                <div class="col-md-4">
-                    <h5>Contacto</h5>
+                <div class="col-md-6">
+                    <h5 class="pt-4">Contacto</h5>
                     <p>Email: <br> contacto@qse.pe</p>
                     <p>Teléfono: <br> +51 967 273 589</p>
                     <h5>Redes sociales:</h5>
