--- a/nosotros.html
+++ b/nosotros.html
@@ -107,10 +107,10 @@
 </header>
 
 <section class="py-5">
-    <div class="container">
+    <div class="container text-center">
         <h2 class="text mb-5">Somos <b>QSE Consulting</b></h2>
         <div class="row align-items-center">
-            <div class="col-12">
+            <div class="col-12 ">
                 <p>En <b>QSE Consulting</b> brinda servicios integrales de
                     consultoría, asesoría, capacitación y desarrollo
                     integral en todas las áreas empresariales; mediante
@@ -186,27 +186,32 @@
 
         <div class="row align-items-center">
 
-            <div class="text-center col-md-6">
+            <div class="text-center col-md-6 mb-5">
                 <img src="img/nosotros/NOSOTROS-QSE-Nuestra-Política-1.webp"
                     alt="¿Por qué confiar en QSE Consulting?" class="img-fluid rounded">
             </div>
-            <div class="col-md-6">
-                <h2 class="text mb-5">Nuestra Política</h2>
-                <p>En <b>QSE Consulting</b> nos dedicamos a brindar servicios
-                    integrales de consultoría, asesoría,
-                    capacitación y desarrollo integral en todas las
-                    áreas empresariales; mediante la aplicación de
-                    herramientas y sistemas gestión de calidad, de
-                    seguridad y salud ocupacional, medioambiental,
-                    anti soborno, entre otros. Estamos comprometidos con
-                    nuestros clientes para construir relaciones
-                    a largo plazo. Buscamos desarrollar estrategias
-                    sostenibles aplicables a todos los sectores de
-                    producción y servicios, privados y públicos.</p>
-                <p>Siendo conscientes de los estándares del servicio que
-                    ofrecemos asumimos los siguientes
-                    compromisos:
-                </p>
+            <div class="col-md-6 ">
+                <h2 class="text mb-5 text-center">Nuestra Política</h2>
+                <div class="text-justify">
+
+                    <p class="">En <b>QSE Consulting</b> nos dedicamos a brindar servicios
+                        integrales de consultoría, asesoría,
+                        capacitación y desarrollo integral en todas las
+                        áreas empresariales; mediante la aplicación de
+                        herramientas y sistemas gestión de calidad, de
+                        seguridad y salud ocupacional, medioambiental,
+                        anti soborno, entre otros. Estamos comprometidos con
+                        nuestros clientes para construir relaciones
+                        a largo plazo. Buscamos desarrollar estrategias
+                        sostenibles aplicables a todos los sectores de
+                        producción y servicios, privados y públicos.</p>
+                    <p>Siendo conscientes de los estándares del servicio que
+                        ofrecemos asumimos los siguientes
+                        compromisos:
+                    </p>
+                </div>
+                
+
                 <ul class="list-unstyled">
                     <li><i class="bi bi-check-circle-fill icono-visto-bueno"></i>
                         Brindar un servicio de alta
@@ -263,7 +268,7 @@
 
 
             <div class="col-md-6">
-                <h2 class="text mb-5">Valores
+                <h2 class="text mb-5 text-center">Valores
                     Institucionales</h2>
 
                 <ul class="list-unstyled">
@@ -343,7 +348,7 @@
 
             </div>
             <div class="col-md-4">
-                <h5>Contacto</h5>
+                <h5 class="pt-4">Contacto</h5>
                 <p>Email: <br> contacto@qse.pe</p>
                 <p>Teléfono: <br> +51 967 273 589</p>
                 <h5>Redes sociales:</h5>
