--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -111,7 +111,7 @@
         <section id="nnosotros" class="py-5">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-12">
+                    <div class="col-12 text-justify">
                         <p>Todos nuestros cursos de formación en QSE Consulting están impartidos por auditores líderes,
                             con
                             profundos conocimientos en el ámbito de gestión de la Calidad, de seguridad ocupacional,
@@ -470,7 +470,7 @@
 
                 </div>
                 <div class="col-md-4">
-                    <h5>Contacto</h5>
+                    <h5 class="pt-4">Contacto</h5>
                     <p>Email: <br> contacto@qse.pe</p>
                     <p>Teléfono: <br> +51 967 273 589</p>
                     <h5>Redes sociales:</h5>
