--- a/mecanismo-de-trabajo.html
+++ b/mecanismo-de-trabajo.html
@@ -110,7 +110,7 @@
         <section id="nnosotros" class="py-5">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-12">
+                    <div class="col-12 text-justify">
                         <p>Para la implementación independiente de un Sistema de Gestión de
                             Calidad (ISO 9001:2015), Sistema de Gestión de Seguridad
                             ocupacional (Ley N° 29783/Ley N° 30222/D.L. N° 1499, ISO
@@ -338,7 +338,7 @@
 
                 </div>
                 <div class="col-md-4">
-                    <h5>Contacto</h5>
+                    <h5 class="pt-4">Contacto</h5>
                     <p>Email: <br> contacto@qse.pe</p>
                     <p>Teléfono: <br> +51 967 273 589</p>
                     <h5>Redes sociales:</h5>
